# vk-crewai-examples

marketing_strategy/: .env.sample  README.md  pyproject.toml
marketing_strategy/output/: campaign_ideas.md  copies.md  marketing_strategy.md
marketing_strategy/src/marketing_posts/: crew.py  main.py
newsletter/: .env.sample  README.md  newsletter.html  pyproject.toml
newsletter/output/: newsletter.html  report.md
newsletter/src/newsletter/: crew.py  main.py
newsletter/src/newsletter/templates/: newsletter_template.html
newsletter/src/newsletter/tools/: research_tool.py
surprise_trip/: .env.sample  README.md  pyproject.toml
surprise_trip/output/: itinerary.md
surprise_trip/src/surprise_trip/: crew.py  main.py
trip_planner/: .env.sample  pyproject.toml
trip_planner/output/: trip_itinerary.md
trip_planner/src/trip_planner/: main.py  trip_agents.py  trip_tasks.py
trip_planner/src/trip_planner/tools/: browser_tools.py  calculator_tools.py  search_tools.py
