[project]
name = "marketing_strategy"
version = "0.1.0"
description = "marketing-strategy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
marketing_strategy = "marketing_posts.main:run"
run_crew = "marketing_posts.main:run"
train = "marketing_posts.main:train"
replay = "marketing_posts.main:replay"
test = "marketing_posts.main:test"
run_with_trigger = "marketing_posts.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_posts"]

[tool.crewai]
type = "crew"
