[project]
name = "surprise_trip"
version = "0.1.0"
description = "surprise_trip using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
surprise_trip = "surprise_trip.main:run"
run_crew = "surprise_trip.main:run"
train = "surprise_trip.main:train"
replay = "surprise_trip.main:replay"
test = "surprise_trip.main:test"
run_with_trigger = "surprise_trip.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
